--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,3 +1,4 @@
-<h1>Hii, <%= user.name %></h1>
+<%- include('layouts/header.ejs') %>
+<h2 class="mb-4">Hii, <%= user.name %></h2>
 
-<a href="/logout">Logout</a>
+<%- include('layouts/footer.ejs') %>
