--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8330,3 +8330,30 @@ a[data-toggle="collapse"] {
 
 .subscribe-form .form-control {
   background: #4897fc; }
+
+.curser-pointer{
+  cursor: pointer;
+}
+
+#chat-container{
+  background-color: lightblue;
+  width: 100%;
+  height: 700px;
+  overflow: scroll;
+}
+
+.border{
+  width: 75%;
+}
+
+.chat-section{
+  display: none;
+}
+
+.online-status{
+  color: green;
+}
+
+.ofline-status{
+  color: red;
+}
