--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,4 +1,69 @@
 <%- include('layouts/header.ejs') %>
 <h2 class="mb-4">Hii, <%= user.name %></h2>
 
+<div class="row">
+    <div class="col-md-3">
+        <ul class="list-group">
+            <% if (users.length>0) { %>
+             <% for( let i = 0; i < users.length ;++i) { %>
+                <li class="list-group-item list-group-item-dark curser-pointer user-list">
+                    <img src="<%= users[i].image %>" alt="" width="40px" height="40px">
+                    <%= users[i].name %>
+                    <% if (users[i].isOnline==='1') { %>
+                        <sup class="online-status" id="<%= users[i]._id %>-status">Online</sup>
+                    <% } else { %>
+                        <sup class="ofline-status" id="<%= users[i]._id %>-status">Ofline</sup>
+                    <% } %>
+                </li>
+             <% } %>
+            <% } %>
+        </ul>
+    </div>
+    <div class="col-md-9">
+        <h3 class="start-head">Click to Start Chat</h3>
+        <div class="chat-section">
+            <div id="chat-container">
+
+            </div>
+            <form action="" id="chat-form">
+                <input type="text" name="message" placeholder="Enter Message" class="border" id="message" required>
+                <input type="submit" value="Send Message" class="btn btn-primary">
+            </form>
+        </div>
+    </div>
+</div>
+
+<script>
+
+    let sender_id='<%=  user._id %>';
+    let socket=io('/user-namespace',{
+        auth:{
+            token:sender_id
+        }
+    });
+
+    // get user online status
+    socket.on('getOnlineUser',(data)=>{
+         $('#'+data.user_id+'-status').text("Online");
+         $('#'+data.user_id+'-status').removeClass('ofline-status');
+         $('#'+data.user_id+'-status').addClass("online-status");
+
+    })
+
+    socket.on('getOflineUser',(data)=>{
+         $('#'+data.user_id+'-status').text("Ofline");
+         $('#'+data.user_id+'-status').removeClass('online-status');
+         $('#'+data.user_id+'-status').addClass("ofline-status");
+
+    })
+
+
+    $(document).ready(function(){
+        $('.user-list').click(function(){
+            $('.start-head').hide();
+            $('.chat-section').show();
+        })
+    });
+</script>
+
 <%- include('layouts/footer.ejs') %>
