--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8357,3 +8357,22 @@ a[data-toggle="collapse"] {
 .ofline-status{
   color: red;
 }
+
+.current-user-chat{
+  text-align: right;
+  margin: 10px;
+  
+}
+
+
+.distance-user-chat{
+  text-align: left;
+  margin: 10px;
+}
+
+.chats{
+  background-color: #0c5460;
+  padding: 5px 15px;
+  color: #fff;
+  border-radius: 8px;
+}
