--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,7 +6,7 @@
         <ul class="list-group">
             <% if (users.length>0) { %>
              <% for( let i = 0; i < users.length ;++i) { %>
-                <li class="list-group-item list-group-item-dark curser-pointer user-list">
+                <li class="list-group-item list-group-item-dark curser-pointer user-list" data-id="<%= users[i]._id %>">
                     <img src="<%= users[i].image %>" alt="" width="40px" height="40px">
                     <%= users[i].name %>
                     <% if (users[i].isOnline==='1') { %>
@@ -23,7 +23,12 @@
         <h3 class="start-head">Click to Start Chat</h3>
         <div class="chat-section">
             <div id="chat-container">
-
+                <!-- <div class="current-user-chat">
+                    <span class="chats">Hii</span>
+                </div>
+                <div class="distance-user-chat">
+                    <span class="chats">Hiii</span>
+                </div> -->
             </div>
             <form action="" id="chat-form">
                 <input type="text" name="message" placeholder="Enter Message" class="border" id="message" required>
@@ -36,6 +41,7 @@
 <script>
 
     let sender_id='<%=  user._id %>';
+    let receiver_id;
     let socket=io('/user-namespace',{
         auth:{
             token:sender_id
@@ -57,13 +63,60 @@
 
     })
 
-
     $(document).ready(function(){
         $('.user-list').click(function(){
+            let userId=$(this).attr('data-id');
+            receiver_id=userId;
             $('.start-head').hide();
             $('.chat-section').show();
         })
     });
+
+    // chat save of user
+    $('#chat-form').submit((e)=>{
+        e.preventDefault();
+        let message=$('#message').val();
+        // $('#message').val('');
+        console.log('submitted');
+
+
+        $.ajax({
+            url:'/saveChat',
+            type:'POST',
+            data:{sender_id:sender_id,receiver_id:receiver_id,message:message},
+            success: function(response){
+                if(response.success){
+                    $('#message').val("");
+                    let chat=response.data.message;
+                    let html=`
+                        <div class="current-user-chat">
+                            <span class="chats">${chat}</span>
+                        </div>
+                    `;
+                    $('#chat-container').append(html);
+                    socket.emit('newChat',response.data)
+                }else{
+                    alert(response.msg);
+                }
+            }
+        })
+
+    })
+
+    socket.on('loadNewChat',(data)=>{
+        // console.log(data);
+        if(sender_id==data.receiver_id && receiver_id==data.sender_id){
+            let html=`
+                <div class="distance-user-chat">
+                    <span class="chats">${data.message}</span>
+                </div>
+            `;
+            $('#chat-container').append(html);
+        }
+        
+
+    })
+    
 </script>
 
 <%- include('layouts/footer.ejs') %>
