fixed scrolling issue on chat loading

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -146,7 +146,7 @@
 
     function scrollChat(){
         $('#chat-container').animate({
-            scrollTop: $('$chat-container').offset().top+ $('$chat-container')[0].scrollHeight
+            scrollTop: $('#chat-container').offset().top+ $('#chat-container')[0].scrollHeight
         },0)
     }
 
